--- a/test/makefile.cmk
+++ b/test/makefile.cmk
@@ -9,7 +9,7 @@ IncludePaths( ["include",
 	"$(YAML_INCLUDE_PATH)",
     "$(UNITTEST_INCLUDE_PATH)"
     ])
-LibraryPaths( [ "./bin",
+LibraryPaths( [ "bin",
 	"../xatmi/bin",
 	"../common/bin",
 	"../buffer/bin",
