broker refactoring - got rid of all std::shared_ptr and stuff
I'ts a lot better and more 'generic' in terms of boot-ordering and
stuff.

Also made a more gracefull shutdown.

Since broker::State has to do a bit of fiddeling when adding and
removing servers, instances and so on. We should consider making "all"
the attributes private.

--- a/broker/makefile.cmk
+++ b/broker/makefile.cmk
@@ -91,26 +91,25 @@ target = LinkExecutable( "bin/casual-broker-admin",
 install_bins.append( target)
 
 
-#
-# unittest
-#
-# test_casual_broker_isolated = [
-#     Compile( "unittest/isolated/source/test_broker.cpp", "unittest/isolated/obj/test_broker.o"),
-#     Compile( "unittest/isolated/source/test_broker_confguration.cpp", "unittest/isolated/obj/test_broker_confguration.o"),
-#     Compile( "unittest/isolated/source/test_broker_transformation.cpp", "unittest/isolated/obj/test_broker_transformation.o"),
-# ]
-# 
-# 
-# LinkIsolatedUnittest( "bin/test-casual-broker-isolated",
-#    test_casual_broker_isolated,
-#     [
-#      "casual-broker-logic",
-#      "casual-common", 
-#      "casual-sf", 
-#      "casual-configuration", 
-#      "casual-mockup-unittest-environment", 
-#      "casual-mockup",
-#      ])
+
+
+test_casual_broker_isolated = [
+#    Compile( "unittest/isolated/source/test_broker.cpp", "unittest/isolated/obj/test_broker.o"),
+    Compile( "unittest/isolated/source/test_broker_confguration.cpp", "unittest/isolated/obj/test_broker_confguration.o"),
+#    Compile( "unittest/isolated/source/test_broker_transformation.cpp", "unittest/isolated/obj/test_broker_transformation.o"),
+]
+ 
+ 
+LinkIsolatedUnittest( "bin/test-casual-broker-isolated",
+   test_casual_broker_isolated,
+    [
+     "casual-broker-logic",
+     "casual-common", 
+     "casual-sf", 
+     "casual-configuration", 
+     "casual-mockup-unittest-environment", 
+     "casual-mockup",
+     ])
 
 	
 #
