--- a/test/source/template_server.yaml
+++ b/test/source/template_server.yaml
@@ -15,7 +15,7 @@ server:
 
 
     
-    - binding: casual-test3
-      service_function: casual_test3
-      message_function: casual_test3
-      transaction: none
+#    - binding: casual-test3
+#      service_function: casual_test3
+#      message_function: casual_test3
+#      transaction: none
