Gracefull shutdown of transaction-manager
Also cleaned common:trace

--- a/common/makefile.cmk
+++ b/common/makefile.cmk
@@ -39,6 +39,7 @@ casual_common_objectfiles = [
     Compile( "source/string.cpp", "obj/string.o"),
     Compile( "source/signal.cpp", "obj/signal.o"),
     Compile( "source/log.cpp", "obj/log.o"),
+    Compile( "source/trace.cpp", "obj/trace.o"),
     Compile( "source/error.cpp", "obj/error.o"),
     Compile( "source/chronology.cpp", "obj/chronology.o"),
     Compile( "source/process.cpp", "obj/process.o"),
