Improved error reporting in build-resource in tools

--- a/queue/makefile.cmk
+++ b/queue/makefile.cmk
@@ -94,6 +94,8 @@ target = LinkLibrary( 'bin/casual-queue-rm',
 
 install_lib.append( target);
 
+Environment( 'CASUAL_LOG', '')
+
 target = LinkResource( 'bin/casual-queue-resource-proxy', 'casual-queue-rm')
 
 install_bin.append( target);
