--- a/configuration/resources.yaml
+++ b/configuration/resources.yaml
@@ -11,7 +11,7 @@ resources:
     # Name of the xa switch struct 
     xa_struct_name: db2xa_switch_static_std
     
-    # needed libraries
+    # needed libraries, user can link this her self
     libraries:
       - db2
       
