--- a/makefile.cmk
+++ b/makefile.cmk
@@ -15,7 +15,12 @@ with Scope():
         
     Build( "broker/makefile.cmk")
     Build( "monitor/makefile.cmk")
-    Build( "transaction/makefile.cmk")
-    Build( "queue/makefile.cmk")
+    
+    with Scope():
+        Parallel( False)
+        
+        Build( "transaction/makefile.cmk")
+        # queue depends on libcasual-resource-proxy-server.so in transaction
+        Build( "queue/makefile.cmk")
 
 Build( "test/makefile.cmk")
