--- a/broker/makefile.cmk
+++ b/broker/makefile.cmk
@@ -45,13 +45,12 @@ install_bins = []
 casual_broker_logic_objectfiles = [
    Compile( "source/broker.cpp", "obj/broker.o"),
    Compile( "source/handle.cpp", "obj/handle.o"),
-#   Compile( "source/action.cpp", "obj/action.o"),
    Compile( "source/state.cpp", "obj/state.o"),
    Compile( "source/transform.cpp", "obj/transform.o"),
    ]
 
 
-LinkArchive( 'bin/casual-broker-logic',
+logic_archive = LinkArchive( 'bin/casual-broker-logic',
    casual_broker_logic_objectfiles )
 
 
@@ -66,7 +65,7 @@ casual_broker_objectfiles = [
 target = LinkExecutable( "bin/casual-broker",
 	casual_broker_objectfiles,
 	[
-     "casual-broker-logic",
+     logic_archive,
      "casual-common",
      "casual-sf",
      "casual-xatmi",
@@ -103,7 +102,7 @@ test_casual_broker_isolated = [
 LinkIsolatedUnittest( "bin/test-casual-broker-isolated",
    test_casual_broker_isolated,
     [
-     "casual-broker-logic",
+     logic_archive,
      "casual-common", 
      "casual-sf", 
      "casual-configuration", 
