--- a/queue/makefile.cmk
+++ b/queue/makefile.cmk
@@ -16,6 +16,7 @@ IncludePaths( [
 
 LibraryPaths( [ 
         'bin',
+        '../transaction/bin',
         '../configuration/bin',
         '../common/bin',
     ]);
@@ -30,19 +31,19 @@ install_bin = []
 # Common stuff
 #
 
-target = LinkLibrary( 'bin/casual-queue-common',
+common = LinkLibrary( 'bin/casual-queue-common',
    [
     Compile( 'source/environment.cpp', 'obj/environment.o'),
    ],
    [ 'casual-common', ]);
  
-install_lib.append( target);
+install_lib.append( common);
 
 #
 # Group
 #
 
-LinkArchive( 'bin/casual-queue-group-archive',
+group_archive = LinkArchive( 'bin/casual-queue-group-archive',
     [
    Compile( 'source/group/group.cpp', 'obj/group/group.o'),
    Compile( 'source/group/database.cpp', 'obj/group/database.o'),
@@ -50,55 +51,55 @@ LinkArchive( 'bin/casual-queue-group-archive',
 ])
 
 
-target_casual_queue_group = LinkExecutable( 'bin/casual-queue-group', 
+queue_group = LinkExecutable( 'bin/casual-queue-group', 
     [Compile( 'source/group/main.cpp', 'obj/group/main.o')], 
     [
-     'casual-queue-group-archive',
-     'casual-queue-common',
+     group_archive,
+     common,
      'casual-common',
      'sqlite3',
      ]);
      
  
-install_bin.append( target_casual_queue_group);
+install_bin.append( queue_group);
  
 #
 # Broker
 #
 
-LinkArchive( 'bin/casual-queue-broker-archive',
+broker_archive = LinkArchive( 'bin/casual-queue-broker-archive',
    [
      Compile( 'source/broker/broker.cpp', 'obj/broker/broker.o'),
      Compile( 'source/broker/handle.cpp', 'obj/broker/handle.o'),
    ])
 
 
-target_casual_queue_broker = LinkExecutable( 'bin/casual-queue-broker', 
+queue_broker = LinkExecutable( 'bin/casual-queue-broker', 
     [Compile( 'source/broker/main.cpp', 'obj/broker/main.o')], 
-    ["casual-queue-broker-archive"]);
+    [ broker_archive, common, 'casual-common', 'casual-configuration']);
 
 
-install_bin.append( target_casual_queue_broker);
+install_bin.append( queue_broker);
 
 #
 # rm
 #  
-target = LinkLibrary( 'bin/casual-queue-rm',
+rm = LinkLibrary( 'bin/casual-queue-rm',
     [
      Compile( 'source/rm/switch.cpp', 'obj/rm/switch.o'),
     ],       
-     [ 'casual-queue-common',
+     [ common,
       'casual-common',
       ]);
 
 
-install_lib.append( target);
+install_lib.append( rm);
 
 Environment( 'CASUAL_LOG', '')
 
-target = LinkResource( 'bin/casual-queue-resource-proxy', 'casual-queue-rm')
+resource_proxy = LinkResourceProxy( 'bin/casual-queue-resource-proxy', 'casual-queue-rm', [ rm])
 
-install_bin.append( target);
+install_bin.append( resource_proxy);
 
 #
 # Client API
@@ -116,12 +117,12 @@ install_lib.append( target);
 # Unittest
 #
 
-target_test_casual_queue = LinkIsolatedUnittest( 'unittest/bin/test-casual-queue', 
+test_casual_queue = LinkIsolatedUnittest( 'unittest/bin/test-casual-queue', 
     [
      Compile( 'unittest/isolated/source/test_group_database.cpp', 'obj/unittest/test_group_database.o'),
     ],
     [
-     'casual-queue-group-archive',
+     group_archive,
      'casual-common',
      'sqlite3',
      ]  
@@ -131,7 +132,7 @@ target_test_casual_queue = LinkIsolatedUnittest( 'unittest/bin/test-casual-queue
 #
 # Make sure the executables is linked before unittest
 #
-Dependencies( target_test_casual_queue, [ target_casual_queue_broker, target_casual_queue_group])
+Dependencies( test_casual_queue, [ queue_broker, queue_group])
 
 
 
