--- a/unittest/gtest/makefile.cmk
+++ b/unittest/gtest/makefile.cmk
@@ -1,8 +1,7 @@
 from casual.make.functiondefinitions import *
 
-INCLUDE_PATHS = ['include', 'current']
 
-SetIncludePaths( INCLUDE_PATHS)
+IncludePaths( ['include', 'current'])
 
 Compile('current/src/gtest-all.cc','obj/gtest-all.o')
 Compile('current/src/gtest_main.cc','obj/gtest_main.o')
