--- a/queue/makefile.cmk
+++ b/queue/makefile.cmk
@@ -36,6 +36,7 @@ install_bin = []
 common = LinkLibrary( 'bin/casual-queue-common',
    [
     Compile( 'source/environment.cpp', 'obj/environment.o'),
+    Compile( 'source/transform.cpp', 'obj/transform.o'),
    ],
    [ 'casual-common', ]);
  
@@ -87,10 +88,6 @@ queue_broker = LinkExecutable( 'bin/casual-queue-broker',
 
 install_bin.append( queue_broker);
 
-
-
-
-
 #
 # rm
 #  
@@ -105,23 +102,40 @@ rm = LinkLibrary( 'bin/casual-queue-rm',
 
 install_lib.append( rm);
 
+#
+# Client API
+#
+
+queue_api = LinkLibrary( 'bin/casual-queue', 
+   [
+       Compile( 'source/queue.cpp', 'obj/queue.o')
+   ],
+   [ common, rm, 'casual-common', 'casual-xatmi'])
+
+install_lib.append( queue_api);
+
+
+#
+# Client
+#
+queue_client = LinkExecutable( 'bin/casual-queue-admin', 
+    [
+        Compile( 'source/broker/admin/client.cpp', 'obj/broker/admin/client.o'),
+     ], 
+   [common, queue_api, 'casual-common', 'casual-sf'])
+
+
+install_bin.append( queue_client);
+
+
+
 Environment( 'CASUAL_LOG', '')
 
 resource_proxy = LinkResourceProxy( 'bin/casual-queue-resource-proxy', 'casual-queue-rm', [ rm])
 
 install_bin.append( resource_proxy);
 
-#
-# Client API
-#
 
-target = LinkLibrary( 'bin/casual-queue', 
-   [
-       Compile( 'source/queue.cpp', 'obj/queue.o')
-   ],
-   [ 'casual-common' ])
-
-install_lib.append( target);
 
 #
 # Unittest
@@ -130,10 +144,13 @@ install_lib.append( target);
 test_casual_queue = LinkIsolatedUnittest( 'unittest/bin/test-casual-queue', 
     [
      Compile( 'unittest/isolated/source/test_group_database.cpp', 'obj/unittest/test_group_database.o'),
+     Compile( 'unittest/isolated/source/test_transform.cpp', 'obj/unittest/test_transform.o'),
     ],
     [
      group_archive,
+     common,
      'casual-common',
+     'casual-sf',
      'sqlite3',
      ]  
 );
