--- a/test/makefile.cmk
+++ b/test/makefile.cmk
@@ -1,22 +1,24 @@
 from casual.make.functiondefinitions import *
 
-Include( "$(CASUAL_BUILD_ENVIRONMENT)")
+Include( '$(CASUAL_BUILD_ENVIRONMENT)')
 
-IncludePaths( ["include",
-	"../common/include",
-	"../serviceframework/include",
-	"../xatmi/include",
-	"$(YAML_INCLUDE_PATH)",
-    "$(UNITTEST_INCLUDE_PATH)"
+IncludePaths( ['include',
+	'../common/include',
+	'../serviceframework/include',
+	'../xatmi/include',
+	'../queue/include',
+	'$(YAML_INCLUDE_PATH)',
+    '$(UNITTEST_INCLUDE_PATH)'
     ])
-LibraryPaths( [ "bin",
-	"../xatmi/bin",
-	"../common/bin",
-	"../buffer/bin",
-	"../serviceframework/bin",
-	"$(YAML_LIBRARY_PATH)",
-	"$(JSON_LIBRARY_PATH)",
-	"$(IBM_DB_LIB)"
+LibraryPaths( [ 'bin',
+	'../xatmi/bin',
+	'../common/bin',
+	'../queue/bin',
+	'../buffer/bin',
+	'../serviceframework/bin',
+	'$(YAML_LIBRARY_PATH)',
+	'$(JSON_LIBRARY_PATH)',
+	'$(IBM_DB_LIB)'
 	])
 
 
@@ -24,9 +26,9 @@ LibraryPaths( [ "bin",
 install_bin = []
 
 
-LinkArchive( "bin/sftestproxy", 
+LinkArchive( 'bin/sftestproxy', 
 	[ 
-	   Compile( "source/sf_testproxy.cpp", "obj/sf_testproxy.o")
+	   Compile( 'source/sf_testproxy.cpp', 'obj/sf_testproxy.o')
 	])
 
 
@@ -34,25 +36,25 @@ LinkArchive( "bin/sftestproxy",
 
 
 
-target = LinkServer( "bin/test",
-	[ Compile( "source/template_server.cpp", "obj/template_server.o")],
+target = LinkServer( 'bin/test',
+	[ Compile( 'source/template_server.cpp', 'obj/template_server.o')],
 	[ 
-		"casual-xatmi", 
-		"casual-common", 
-		"casual-sf",
-		"casual-mockup-rm"
+		'casual-xatmi', 
+		'casual-common', 
+		'casual-sf',
+		'casual-queue'
 	],
-	"source/template_server.yaml",
-	["rm-mockup"])
+	'source/template_server.yaml',
+	['rm-mockup', 'casual-queue-rm'])
 
 install_bin.append( target)
 
-#Compile( "source/template_server_dispatcher.c", "obj/template_server_dispatcher.o")
+#Compile( 'source/template_server_dispatcher.c', 'obj/template_server_dispatcher.o')
 
-#LinkExecutable("test",
-#    ["obj/template_server_dispatcher.o",
-#    "obj/template_server.o"],
-#    ["casual-xatmi", "casual-common", "casual-mockup"])	
+#LinkExecutable('test',
+#    ['obj/template_server_dispatcher.o',
+#    'obj/template_server.o'],
+#    ['casual-xatmi', 'casual-common', 'casual-mockup'])	
     	
 
 
@@ -61,9 +63,9 @@ install_bin.append( target)
 #
 
 
-LinkArchive( "bin/sf-test-vo",
+LinkArchive( 'bin/sf-test-vo',
     [
-	   Compile( "source/sf_testvo.cpp", "obj/sf_testvo.o")
+	   Compile( 'source/sf_testvo.cpp', 'obj/sf_testvo.o')
 	])
 
 
@@ -72,60 +74,60 @@ LinkArchive( "bin/sf-test-vo",
 #
 
 
-target = LinkServer("bin/sf_test",
+target = LinkServer('bin/sf_test',
     [
-	   Compile( "source/template_sf_server.cpp", "obj/template_sf_server.o"),
-	   Compile( "source/template_sf_server_implementation.cpp", "obj/template_sf_server_implementation.o"),
+	   Compile( 'source/template_sf_server.cpp', 'obj/template_sf_server.o'),
+	   Compile( 'source/template_sf_server_implementation.cpp', 'obj/template_sf_server_implementation.o'),
     ],
     [
-	"sf-test-vo",
-    "casual-xatmi",
-    "casual-common",
-    "casual-sf"
+	'sf-test-vo',
+    'casual-xatmi',
+    'casual-common',
+    'casual-sf'
     ],
 	[
-    "casual_sf_test1",
-    "casual_sf_test2"
+    'casual_sf_test1',
+    'casual_sf_test2'
     ])
 
 install_bin.append( target)
 	
 
 
-target = LinkExecutable( "bin/test_client",
+target = LinkExecutable( 'bin/test_client',
 	[ 
-		Compile( "source/template_client.cpp", "obj/template_client.o")
+		Compile( 'source/template_client.cpp', 'obj/template_client.o')
 	], 
-    ["casual-common", "casual-xatmi"])
+    ['casual-common', 'casual-xatmi'])
 	
 
 install_bin.append( target)
 
 
-target = LinkExecutable( "bin/test_multicall_client",
+target = LinkExecutable( 'bin/test_multicall_client',
 	[
-		Compile( "source/test_multicall.cpp", "obj/test_multicall.o")
-	], ["casual-common", "casual-xatmi", "casual-sf"])
+		Compile( 'source/test_multicall.cpp', 'obj/test_multicall.o')
+	], ['casual-common', 'casual-xatmi', 'casual-sf'])
 	
 install_bin.append( target)
 
 
-target = LinkExecutable( "bin/test_proxycall_client",
+target = LinkExecutable( 'bin/test_proxycall_client',
 	[ 
-		Compile( "source/test_proxycall.cpp", "obj/test_proxycall.o")
+		Compile( 'source/test_proxycall.cpp', 'obj/test_proxycall.o')
     ], 
-	["casual-sf", "sftestproxy", "casual-xatmi"])
+	['casual-sf', 'sftestproxy', 'casual-xatmi'])
 	
 install_bin.append( target)
 #
 # unittest
 #
 
-LinkIsolatedUnittest( "unittest/bin/test-casual-generation-isolated",
+LinkIsolatedUnittest( 'unittest/bin/test-casual-generation-isolated',
     [
-	   Compile( "unittest/isolated/source/test_yaml_sf_generation.cpp", "unittest/isolated/obj/test_yaml_sf_generation.o")
+	   Compile( 'unittest/isolated/source/test_yaml_sf_generation.cpp', 'unittest/isolated/obj/test_yaml_sf_generation.o')
 	],
-    ["casual-sf", "casual-xatmi", "yaml-cpp"])
+    ['casual-sf', 'casual-xatmi', 'yaml-cpp'])
 	
 	
 #
@@ -133,15 +135,15 @@ LinkIsolatedUnittest( "unittest/bin/test-casual-generation-isolated",
 #
 
 
-LinkServer("bin/sf-detoct-test-server",
+LinkServer('bin/sf-detoct-test-server',
     [ 
-	   Compile( "source/sf_testserverserver.cpp", "obj/sf_testserverserver.o"),
-	   Compile( "source/sf_testserverimplementation.cpp", "obj/sf_testserverimplementation.o")
+	   Compile( 'source/sf_testserverserver.cpp', 'obj/sf_testserverserver.o'),
+	   Compile( 'source/sf_testserverimplementation.cpp', 'obj/sf_testserverimplementation.o')
 	],
-    ["sf-test-vo",
-    "casual-sf",
-    "casual-xatmi"],
-    ["casual_sf_test1","casual_sf_test2"])
+    ['sf-test-vo',
+    'casual-sf',
+    'casual-xatmi'],
+    ['casual_sf_test1','casual_sf_test2'])
 
 #
 # Install
