--- a/common/makefile.cmk
+++ b/common/makefile.cmk
@@ -24,28 +24,28 @@ install_libs = []
 
 
 casual_common_objectfiles = [
-    Compile( 'source/server_context.cpp', 'obj/server_context.o'),
-    Compile( 'source/calling_context.cpp', 'obj/calling_context.o'),
-    Compile( 'source/buffer/x_octet.cpp', 'obj/buffer/x_octet.o'),
-    Compile( 'source/buffer/pool.cpp', 'obj/buffer/pool.o'),
-    Compile( 'source/transaction_context.cpp', 'obj/transaction_context.o'),
-    Compile( 'source/transaction_id.cpp', 'obj/transaction_id.o'),
-    Compile( 'source/ipc.cpp', 'obj/ipc.o'),
-    Compile( 'source/queue.cpp', 'obj/queue.o'),
-    Compile( 'source/message/type.cpp', 'obj/message/type.o'),
-    Compile( 'source/message/handle.cpp', 'obj/message/handle.o'),
+    Compile( 'source/server_context.cpp'),
+    Compile( 'source/calling_context.cpp'),
+    Compile( 'source/buffer/x_octet.cpp'),
+    Compile( 'source/buffer/pool.cpp'),
+    Compile( 'source/transaction/context.cpp'),
+    Compile( 'source/transaction/id.cpp'),
+    Compile( 'source/ipc.cpp'),
+    Compile( 'source/queue.cpp'),
+    Compile( 'source/message/type.cpp'),
+    Compile( 'source/message/handle.cpp'),
     
-    Compile( 'source/uuid.cpp', 'obj/uuid.o'),
-    Compile( 'source/environment.cpp', 'obj/environment.o'),
-    Compile( 'source/file.cpp', 'obj/file.o'),
-    Compile( 'source/string.cpp', 'obj/string.o'),
-    Compile( 'source/signal.cpp', 'obj/signal.o'),
-    Compile( 'source/log.cpp', 'obj/log.o'),
-    Compile( 'source/trace.cpp', 'obj/trace.o'),
-    Compile( 'source/error.cpp', 'obj/error.o'),
-    Compile( 'source/chronology.cpp', 'obj/chronology.o'),
-    Compile( 'source/process.cpp', 'obj/process.o'),
-    Compile( 'source/network_byteorder.cpp', 'obj/network_byteorder.o'),
+    Compile( 'source/uuid.cpp'),
+    Compile( 'source/environment.cpp'),
+    Compile( 'source/file.cpp'),
+    Compile( 'source/string.cpp'),
+    Compile( 'source/signal.cpp'),
+    Compile( 'source/log.cpp'),
+    Compile( 'source/trace.cpp'),
+    Compile( 'source/error.cpp'),
+    Compile( 'source/chronology.cpp'),
+    Compile( 'source/process.cpp'),
+    Compile( 'source/network_byteorder.cpp'),
 ]
 
 
@@ -61,7 +61,7 @@ install_libs.append( common)
 mockup = LinkLibrary( 'bin/casual-mockup', 
      [
        #Compile( 'source/mockup.cpp', 'obj/mockup.o'),
-       Compile( 'source/mockup/ipc.cpp', 'obj/mockup/ipc.o'),
+       Compile( 'source/mockup/ipc.cpp'),
      ],
      [ common])
 
@@ -72,7 +72,7 @@ install_libs.append( mockup)
 #
 target = LinkLibrary( 'bin/casual-mockup-rm', 
      [
-       Compile( 'source/mockup/rm.cpp', 'obj/mockup/rm.o')
+       Compile( 'source/mockup/rm.cpp')
      ],
      [ common])
 
@@ -80,7 +80,7 @@ install_libs.append( target)
 
 mockup_unittest = LinkLibrary( 'bin/casual-mockup-unittest-environment',
     [ 
-      Compile( 'source/mockup/unittest_envrionment.cpp', 'obj/mockup/unittest_envrionment.o'),  
+      Compile( 'source/mockup/unittest_envrionment.cpp'),  
     ],
     [ common, mockup, 'gtest'])
 
@@ -89,7 +89,7 @@ install_libs.append( mockup_unittest)
 
 target_simple_process = LinkExecutable( 'bin/simple_process',
     [
-     Compile( 'unittest/isolated/source/simple_process.cpp', 'unittest/isolated/obj/simple_process.o')
+     Compile( 'unittest/isolated/source/simple_process.cpp')
     ], 
     [ common]
     )	
@@ -99,28 +99,28 @@ target_simple_process = LinkExecutable( 'bin/simple_process',
 # unittest
 #
 unittest_objectfiles = [
-   Compile( 'unittest/isolated/source/test_buffer.cpp', 'unittest/isolated/obj/test_buffer.o'),
-   Compile( 'unittest/isolated/source/test_ipc.cpp', 'unittest/isolated/obj/test_ipc.o'),
-   Compile( 'unittest/isolated/source/test_marshal.cpp', 'unittest/isolated/obj/test_marshal.o'),
-   Compile( 'unittest/isolated/source/test_queue.cpp', 'unittest/isolated/obj/test_queue.o'),
-   Compile( 'unittest/isolated/source/test_message_dispatch.cpp', 'unittest/isolated/obj/test_message_dispatch.o'),
-   Compile( 'unittest/isolated/source/test_server_context.cpp', 'unittest/isolated/obj/test_server_context.o'),
+   Compile( 'unittest/isolated/source/test_buffer.cpp'),
+   Compile( 'unittest/isolated/source/test_ipc.cpp'),
+   Compile( 'unittest/isolated/source/test_marshal.cpp'),
+   Compile( 'unittest/isolated/source/test_queue.cpp'),
+   Compile( 'unittest/isolated/source/test_message_dispatch.cpp'),
+   Compile( 'unittest/isolated/source/test_server_context.cpp'),
    
-   Compile( 'unittest/isolated/source/test_uuid.cpp', 'unittest/isolated/obj/test_uuid.o'),
-   Compile( 'unittest/isolated/source/test_arguments.cpp', 'unittest/isolated/obj/test_arguments.o'),
-   Compile( 'unittest/isolated/source/test_file.cpp', 'unittest/isolated/obj/test_file.o'),
-   Compile( 'unittest/isolated/source/test_process.cpp', 'unittest/isolated/obj/test_process.o'),
-   Compile( 'unittest/isolated/source/test_string.cpp', 'unittest/isolated/obj/test_string.o'),
-   Compile( 'unittest/isolated/source/test_error.cpp', 'unittest/isolated/obj/test_error.o'),
-   Compile( 'unittest/isolated/source/test_network_byteorder.cpp', 'unittest/isolated/obj/test_network_byteorder.o'),
+   Compile( 'unittest/isolated/source/test_uuid.cpp'),
+   Compile( 'unittest/isolated/source/test_arguments.cpp'),
+   Compile( 'unittest/isolated/source/test_file.cpp'),
+   Compile( 'unittest/isolated/source/test_process.cpp'),
+   Compile( 'unittest/isolated/source/test_string.cpp'),
+   Compile( 'unittest/isolated/source/test_error.cpp'),
+   Compile( 'unittest/isolated/source/test_network_byteorder.cpp'),
    
-   Compile( 'unittest/isolated/source/test_signal.cpp', 'unittest/isolated/obj/test_signal.o'),
+   Compile( 'unittest/isolated/source/test_signal.cpp'),
    
-   Compile( 'unittest/isolated/source/test_transaction_id.cpp', 'unittest/isolated/obj/test_transaction_id.o'),
-   Compile( 'unittest/isolated/source/test_algorithm.cpp', 'unittest/isolated/obj/test_algorithm.o'),
+   Compile( 'unittest/isolated/source/test_transaction_id.cpp'),
+   Compile( 'unittest/isolated/source/test_algorithm.cpp'),
    
-   Compile( 'unittest/isolated/source/test_mockup.cpp', 'unittest/isolated/obj/test_mockup.o'),
-   Compile( 'unittest/isolated/source/test_traits.cpp', 'unittest/isolated/obj/test_traits.o'),
+   Compile( 'unittest/isolated/source/test_mockup.cpp'),
+   Compile( 'unittest/isolated/source/test_traits.cpp'),
 ]
 
 
