--- a/common/makefile.cmk
+++ b/common/makefile.cmk
@@ -25,6 +25,7 @@ install_libs = []
 
 casual_common_objectfiles = [
     Compile( 'source/server/context.cpp'),
+    Compile( 'source/server/lifetime.cpp'),
     Compile( 'source/call/context.cpp'),
     Compile( 'source/call/timeout.cpp'),
     Compile( 'source/buffer/x_octet.cpp'),
