--- a/serviceframework/makefile.cmk
+++ b/serviceframework/makefile.cmk
@@ -1,68 +1,64 @@
-from casual.make.functiondefinitions import *
+from casual.make.directive import *
 
 
-Include( "$(CASUAL_BUILD_ENVIRONMENT)")
+Include( '$(CASUAL_BUILD_ENVIRONMENT)')
 
 
 IncludePaths([
-    "include",
-    "../common/include",
-    "../xatmi/include",
-    "$(YAML_INCLUDE_PATH)",
-    "$(JSON_INCLUDE_PATH)",
-	"$(UNITTEST_INCLUDE_PATH)",
+    'include',
+    '../common/include',
+    '../xatmi/include',
+    '$(YAML_INCLUDE_PATH)',
+    '$(JSON_INCLUDE_PATH)',
+	'$(UNITTEST_INCLUDE_PATH)',
     ])
 	
 LibraryPaths([
-    "../common/bin",
-    "../xatmi/bin",
-    "$(YAML_LIBRARY_PATH)",
-    "$(JSON_LIBRARY_PATH)",
+    '../common/bin',
+    '../xatmi/bin',
+    '$(YAML_LIBRARY_PATH)',
+    '$(JSON_LIBRARY_PATH)',
     ])
 
 install_lib = []
 
-casual_sf_objectfiles = [
-    Compile( "source/archive/archive.cpp", "obj/archive/archive.o"),
-    Compile( "source/archive/maker.cpp", "obj/archive/maker.o"),
-    Compile( "source/archive/log.cpp", "obj/archive/log.o"),
-    Compile( "source/buffer.cpp", "obj/buffer.o"),
-    Compile( "source/server.cpp", "obj/server.o"),
-    Compile( "source/proxy.cpp", "obj/proxy.o"),
-    Compile( "source/service.cpp", "obj/service.o"),
-    Compile( "source/service_protocol.cpp", "obj/service_protocol.o"),
-    Compile( "source/xatmi_call.cpp", "obj/xatmi_call.o"),
-    Compile( "source/platform.cpp", "obj/platform.o"),
-    
-    Compile( "source/trace.cpp", "obj/trace.o"),
-]
+lib_sf = LinkLibrary( 'bin/casual-sf',
+    [
+        Compile( 'source/archive/archive.cpp'),
+        Compile( 'source/archive/maker.cpp'),
+        Compile( 'source/archive/log.cpp'),
+        Compile( 'source/buffer.cpp'),
+        Compile( 'source/server.cpp'),
+        Compile( 'source/proxy.cpp'),
+        Compile( 'source/service.cpp'),
+        Compile( 'source/service_protocol.cpp'),
+        Compile( 'source/xatmi_call.cpp'),
+        Compile( 'source/platform.cpp'),
+        
+        Compile( 'source/trace.cpp', 'obj/trace.o'),
+    ],
+    ['casual-common', 'casual-xatmi', 'yaml-cpp', 'json-c'])
 
-target = LinkLibrary( "bin/casual-sf",
-    casual_sf_objectfiles,
-    ["casual-common", "casual-xatmi", "yaml-cpp", "json-c"])
-
-install_lib.append( target)
+install_lib.append( lib_sf)
 
 #
 # unittest
 #
-casual_sf_isolated_objectfiles = [
-    Compile( "unittest/isolated/source/test_namevaluepair.cpp", "unittest/isolated/obj/test_namevaluepair.o"),
-    Compile( "unittest/isolated/source/test_archive.cpp", "unittest/isolated/obj/test_archive.o"),
-    Compile( "unittest/isolated/source/test_traits.cpp", "unittest/isolated/obj/test_traits.o"),
-    Compile( "unittest/isolated/source/test_yaml_archive.cpp", "unittest/isolated/obj/test_yaml_archive.o"),
-    Compile( "unittest/isolated/source/test_json_archive.cpp", "unittest/isolated/obj/test_json_archive.o"),
-    Compile( "unittest/isolated/source/test_buffer.cpp", "unittest/isolated/obj/test_buffer.o"),
-    Compile( "unittest/isolated/source/test_service.cpp", "unittest/isolated/obj/test_service.o"),
-    Compile( "unittest/isolated/source/test_uuid.cpp", "unittest/isolated/obj/test_uuid.o"),
-    Compile( "unittest/isolated/source/test_xatmi_call.cpp", "unittest/isolated/obj/test_xatmi_call.o"),
-    
-    Compile( "unittest/isolated/source/test_vo.cpp", "unittest/isolated/obj/test_vo.o"),
-]
 
-LinkIsolatedUnittest( "bin/test-casual-sf",
-	casual_sf_isolated_objectfiles,
-	["casual-sf", "casual-xatmi", "casual-common", "json-c", "yaml-cpp"])
+LinkIsolatedUnittest( 'bin/test-casual-sf',
+	[
+        Compile( 'unittest/isolated/source/test_namevaluepair.cpp'),
+        Compile( 'unittest/isolated/source/test_archive.cpp'),
+        Compile( 'unittest/isolated/source/test_traits.cpp'),
+        Compile( 'unittest/isolated/source/test_yaml_archive.cpp'),
+        Compile( 'unittest/isolated/source/test_json_archive.cpp'),
+        Compile( 'unittest/isolated/source/test_buffer.cpp'),
+        Compile( 'unittest/isolated/source/test_service.cpp'),
+        Compile( 'unittest/isolated/source/test_uuid.cpp'),
+        Compile( 'unittest/isolated/source/test_xatmi_call.cpp'),
+        Compile( 'unittest/isolated/source/test_vo.cpp'),
+    ],
+	[ lib_sf, 'casual-xatmi', 'casual-common', 'json-c', 'yaml-cpp'])
 
 #
 # Install
