--- a/unittest/gtest/makefile.cmk
+++ b/unittest/gtest/makefile.cmk
@@ -1,11 +1,10 @@
-from casual.make.functiondefinitions import *
+from casual.make.directive import *
 
 
 IncludePaths( ['include', 'current'])
 
-Compile('current/src/gtest-all.cc','obj/gtest-all.o')
-Compile('current/src/gtest_main.cc','obj/gtest_main.o')
-
 LinkArchive('bin/gtest',
-	['obj/gtest-all.o',
-	'obj/gtest_main.o'])
+	[ 
+		Compile('current/src/gtest-all.cc'),
+		Compile('current/src/gtest_main.cc')
+	])
